tests/fsharp/typecheck/sigs/neg_byref_15.bsl

neg_byref_15.fs(2,50,2,71): typecheck error FS0406: The byref-typed variable 'ab' is used in an invalid way. Byrefs cannot be captured by closures or passed to inner functions.
